[tool.poetry]
name = "perplexity"
version = "0.1.0"
description = "A FastAPI backend application designed to integrate with vector databases, LangChain, HuggingFace, and OpenAI."
authors = ["Michael Bastos <bastosmichael@gmail.com>"]
readme = "README.md"
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.2"
uvicorn = "^0.15.0"
langchain = "^0.0.240"
python-dotenv = "^1.0.0"
openai = "^0.27.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^23.7.0"

[tool.poetry.scripts]
perplexity = "perplexity.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
